update and insert

--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.xl.android.FirstActivity">
 
 
@@ -23,6 +24,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
         android:layout_marginTop="87dp"
-        android:text="Android Studio" />
+        android:text="@string/android_studio" />
+
+
 </RelativeLayout>
