新增广播接收与内容提供，安卓本地数据库SQLite，修改部分原有代码

--- a/app/src/main/res/layout/broadcast/layout/broadcast_layout.xml
+++ b/app/src/main/res/layout/broadcast/layout/broadcast_layout.xml
@@ -4,10 +4,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/broadcast_list_view"
+    <Button
+        android:id="@+id/send"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="wrap_content"
+        android:onClick="doClick"
+        android:text="普通广播" />
+
+    <Button
+        android:id="@+id/send2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="doClick"
+        android:text="有序广播" />
+
+    <Button
+        android:id="@+id/send3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="doClick"
+        android:text="异步广播" />
+    <Button
+        android:id="@+id/send4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="doClick"
+        android:text="本地广播" />
 
 </LinearLayout>
