--- a/app/src/main/res/layout/activity/layout/therr_activity.xml
+++ b/app/src/main/res/layout/activity/layout/therr_activity.xml
@@ -7,11 +7,11 @@
         android:id="@+id/text3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/text2"/>
+        android:text="******"/>
     <Button
         android:id="@+id/but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/back" />
+        android:text="返回上一页" />
 
 </LinearLayout>
