--- a/app/src/main/res/layout/content/layout/android_file.xml
+++ b/app/src/main/res/layout/content/layout/android_file.xml
@@ -2,34 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <EditText
+        android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="18sp" />
+        android:ems="10"
+        android:hint="@string/please_edit" >
+    </EditText>
 
-    <TextView
-        android:id="@+id/textView2"
+    <Button
+        android:id="@+id/but1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="18sp" />
+        android:text="@string/please_write" />
 
-    <TextView
-        android:id="@+id/textView3"
+    <Button
+        android:id="@+id/but2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="18sp" />
+        android:text="@string/please_read" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="18sp" />
+        android:text="@string/read_text" />
 
 </LinearLayout>
