--- a/app/src/main/res/layout/content/layout/sharedpreference.xml
+++ b/app/src/main/res/layout/content/layout/sharedpreference.xml
@@ -1,39 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/button1"
+    <EditText
+        android:id="@+id/shared_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="无返回值intent" />
+        android:ems="10"
+        android:hint="@string/please_edit" >
+    </EditText>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/shared_but1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="有返回值intent" />
+        android:text="@string/please_write" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/shared_but2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="调用系统程序" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="隐式传参" />
+        android:text="@string/please_read" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/shared_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:text="@string/read_text" />
+
+    <Button
+        android:id="@+id/preference_activity_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:gravity="center" />
+        android:text="@string/preferenceactivity" />
 
 </LinearLayout>
