--- a/app/src/main/res/layout/handler/layout/handler_first.xml
+++ b/app/src/main/res/layout/handler/layout/handler_first.xml
@@ -9,8 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:text="@string/app_name" />
+        android:gravity="center" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -26,7 +25,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:text="@string/app_name" />
+        android:layout_marginBottom="10dp" />
 
 </RelativeLayout>
