--- a/app/src/main/res/layout/handler/layout/handler_four.xml
+++ b/app/src/main/res/layout/handler/layout/handler_four.xml
@@ -19,7 +19,6 @@
     <TextView
         android:id="@+id/fourtextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
