--- a/app/src/main/res/layout/main/layout/activity_layout.xml
+++ b/app/src/main/res/layout/main/layout/activity_layout.xml
@@ -2,19 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:orientation="vertical">
 
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ic_button"
         android:textColor="#000"
         android:text="Activity" />
 
     <Button
+        android:layout_marginTop="10dp"
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ic_button"
         android:textColor="#000"
         android:text="Handler" />
 
