修改部分原有代码!

--- a/app/src/main/res/layout/content/layout/contentp_layout.xml
+++ b/app/src/main/res/layout/content/layout/contentp_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     android:orientation="vertical">
 
     <Button
@@ -9,6 +10,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ic_button"
         android:text="@string/sqlites" />
 
     <Button
@@ -16,6 +18,8 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_button"
         android:text="@string/contentvalue" />
 
     <Button
@@ -23,6 +27,8 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_button"
         android:text="@string/contentprovider1" />
 
     <Button
@@ -30,6 +36,8 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_button"
         android:text="@string/sharedpreferences" />
 
     <Button
@@ -37,6 +45,8 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_button"
         android:text="@string/android_" />
 
     <Button
@@ -44,6 +54,8 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_button"
         android:text="@string/android_s" />
 
     <Button
@@ -51,6 +63,15 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_button"
         android:text="@string/sqlite_" />
+    
+    <TextView
+        android:layout_marginTop="30dp"
+        android:id="@+id/content"
+        android:textColor="@color/colorAccent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
