--- a/app/src/main/res/layout/broadcast/layout/broadcast_layout.xml
+++ b/app/src/main/res/layout/broadcast/layout/broadcast_layout.xml
@@ -2,33 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     android:orientation="vertical">
 
     <Button
         android:id="@+id/send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="doClick"
+        android:background="@drawable/ic_button"
         android:text="普通广播" />
 
     <Button
         android:id="@+id/send2"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="doClick"
+        android:background="@drawable/ic_button"
         android:text="有序广播" />
 
     <Button
         android:id="@+id/send3"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="doClick"
+        android:background="@drawable/ic_button"
         android:text="异步广播" />
     <Button
         android:id="@+id/send4"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="doClick"
+        android:background="@drawable/ic_button"
         android:text="本地广播" />
 
 </LinearLayout>
