新增安卓控件动画，属性动画，修改部分原有代码!

--- a/app/src/main/res/layout/view/layout/simple_adapter.xml
+++ b/app/src/main/res/layout/view/layout/simple_adapter.xml
@@ -17,8 +17,8 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center"
-        android:textColor="@color/colorPrimary"
-        android:singleLine="true"
+        android:singleLine="false"
+        android:textColor="#ffffff"
         android:text="textview"/>
 
 </LinearLayout>
