--- a/app/src/main/res/layout/sensor/layout/senser_layout.xml
+++ b/app/src/main/res/layout/sensor/layout/senser_layout.xml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/sensor_text"
+    <LinearLayout
+        android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:text="" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/sensor_text2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:text="" />
+        <TextView
+            android:layout_marginTop="5dp"
+            android:id="@+id/sensor_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="****" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/sensor_text2"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="****" />
+
+        <TextView
+            android:id="@+id/sensor_text3"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="****" />
+
+    </LinearLayout>
+
+
+
+</ScrollView>
