新增自定义视图：画笔，画布，路径和SurfaceView，更新部分原有代码,修改原有bug!

--- a/app/src/main/res/layout/view/layout/simple_adapter.xml
+++ b/app/src/main/res/layout/view/layout/simple_adapter.xml
@@ -17,8 +17,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center"
-        android:singleLine="false"
-        android:textColor="#ffffff"
-        android:text="textview"/>
+        android:singleLine="true"
+        android:textColor="#ffffff"/>
 
 </LinearLayout>
