--- a/app/src/main/res/layout/view/layout/simple_adapter.xml
+++ b/app/src/main/res/layout/view/layout/simple_adapter.xml
@@ -18,6 +18,6 @@
         android:layout_weight="1"
         android:gravity="center"
         android:singleLine="true"
-        android:textColor="#ffffff"/>
+        android:textColor="#000000"/>
 
 </LinearLayout>
