--- a/app/src/main/res/layout/view/layout/view_layout.xml
+++ b/app/src/main/res/layout/view/layout/view_layout.xml
@@ -4,13 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!--
+    //android:horizontalSpacing="5dp"
+    //android:verticalSpacing="5dp"
+    -->
+
     <GridView
         android:id="@+id/view_layout"
+        android:layout_marginStart="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="3"
-        android:horizontalSpacing="5dp"
-        android:verticalSpacing="5dp">
+        android:numColumns="4">
     </GridView>
 
 </LinearLayout>
